# ytui-dl

./: .gitignore  Cargo.toml  LICENSE  README.md  README.pt-BR.md  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
packaging/aur/: README.md
packaging/aur/ytd-git/: PKGBUILD
packaging/aur/ytui-dl-git/: PKGBUILD
src/: action.rs  app.rs  config.rs  diag.rs  error.rs  event.rs  i18n.rs  main.rs  models.rs  tui.rs  updater.rs
src/downloader/: mod.rs  progress.rs  ytdlp.rs
src/ui/: help.rs  home.rs  mod.rs  preview.rs  queue.rs  settings.rs  update_modal.rs  widgets.rs
