[package]
name = "ytui-dl"
version = "0.2.5"
edition = "2021"
description = "YouTube TUI downloader powered by yt-dlp"
license = "MIT"
readme = "README.md"
repository = "https://github.com/EaeDave/ytui-dl"
homepage = "https://github.com/EaeDave/ytui-dl"
keywords = ["youtube", "download", "tui", "yt-dlp", "terminal"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tui-input = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
thiserror = "2"
color-eyre = "0.6"
uuid = { version = "1", features = ["v4"] }
which = "7"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
